<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.seaory.seaorydemo.SeaoryActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="25dp">

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_1" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_2" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_3" />

        </android.support.design.widget.TabLayout>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"

        >
        <android.support.v4.view.ViewPager
            android:id="@+id/container"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/lvCommand"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="#E6F0FA"
                android:isScrollContainer="true"
                android:scrollbarAlwaysDrawVerticalTrack="true"
                android:scrollbarSize="15dp"
                android:scrollbarStyle="insideOverlay"
                android:scrollbarThumbVertical="@color/teal_200"
                android:scrollbars="vertical"
                android:layout_weight="1"
                tools:ignore="NestedWeights" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/chkAddCommand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Add CMD"
                    android:textColor="@android:color/holo_red_dark"
                    />
                <EditText
                    android:id="@+id/txtCount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:gravity="center"
                    android:hint="Count"/>
                <Button
                    android:id="@+id/btnClear"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Clear"/>
                <Button
                    android:id="@+id/btnStart"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Start"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/tvSuc"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="Suc:0"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/tvFail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="Fail:0"
                        android:layout_weight="1"/>
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:id="@+id/textView_result"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="#E6F0FA"
                android:gravity="bottom"
                android:isScrollContainer="true"
                android:scrollbarAlwaysDrawVerticalTrack="true"
                android:scrollbarSize="15dp"
                android:scrollbarStyle="insideOverlay"
                android:scrollbarThumbVertical="@color/teal_200"
                android:scrollbars="vertical"
                android:layout_weight="2"/>
        </LinearLayout>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>